2007-11-30  Nestor Salceda  <nestor.salceda@gmail.com>

	* Expression.cs, ExpressionFillerVisitor.cs: Added the code for
	including the Stfld in the Expressions, and computate it for check the
	code duplication.

2007-11-30  Nestor Salceda  <nestor.salceda@gmail.com>

	* AvoidLargeClassesRule.cs: Extract a method and use a predicate for the
	checking.  This fixes the code duplication warning.

2007-11-29  Nestor Salceda  <nestor.salceda@gmail.com>

	* CodeDuplicatedLocator.cs: Renamed field's for avoid the common prefix
	that warn us for the LargeClass smell.

2007-11-29  Nestor Salceda  <nestor.salceda@gmail.com>

	* AvoidSpeculativeGeneralityRule.cs: Change the behavior of unnecessary
	delegation.  A class with unnecessary delegation is a class that mostly
	forwards and delegates the calls.

2007-11-28  Nestor Salceda  <nestor.salceda@gmail.com>
	
	* AvoidCodeDuplicatedInSameClassRule.cs,
	AvoidCodeDuplicatedInSiblingClassesRule.cs, AvoidLongMethodsRule.cs,
	AvoidLongParameterListsRule.cs, AvoidLargeClassesRule.cs,
	AvoidSpeculativeGeneralityRule.cs: Avoid instantiating MessageCollection
	unless we use it for returning a message.

2007-10-19  Nestor Salceda  <nestor.salceda@gmail.com>
	
	* Expression.cs: When overriding the Equals method, if the value is
	null, then return false.  Fixes the EqualShouldHandleNullArgRule
	violation.

2007-10-19  Nestor Salceda  <nestor.salceda@gmail.com>

	* Utilities.cs: Marked this class as static for avoid uninstantiated
	internal class rule violation.

2007-10-07  Sebastien Pouliot  <sebastien@ximian.com>

	* Gendarme.Rules.Smells.mdp: Update project file.
	* Makefile.am: Use nunit-console2 to run the unit tests.

2007-10-04  Nestor Salceda  <nestor.salceda@gmail.com>

	* Gendarme.Rules.Smells.mdp:  Removed empty directory entry in the
	MonoDevelop project file.

2007-10-04  Nestor Salceda  <nestor.salceda@gmail.com>

	* Gendarme.Rules.Smells.mdp:  New.  Created MonoDevelop project file for
	the smell rules.
