@@ -1,5 +1,10 @@
 2007-11-30  Nestor Salceda  <nestor.salceda@gmail.com>
 
+	* AvoidLargeClassesRule.cs: Added the special case for the fields
+	prefixed as $$field-, when this happens, there aren't a common prefix.
+
+2007-11-30  Nestor Salceda  <nestor.salceda@gmail.com>
+
 	* Expression.cs, ExpressionFillerVisitor.cs: Added the code for
 	including the Stfld in the Expressions, and computate it for check the
 	code duplication.
